# JD_CV_AI_Solution

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  requirements_app.txt
notebook/: 1. PDF_ingestion.ipynb  2. JD_CV_LLM_Parsing.ipynb  3. CV_JD_Engine.ipynb
src/: utils.py
src/document_ingestion/: pdf_processor.py
src/parsers/: cv_parsers.py  cv_vs_jd_parsers.py  jd_parsers.py
src/prompt_templates/: cd_vs_jd_prompt.txt  cv_prompt.txt  jd_prompt.txt
